--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "lint": "next lint",
+     "dev:lan": "next dev -H 0.0.0.0 -p 3000",
     "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
